--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,18 @@
   <head>
     <title>Recharge API Documentation</title>
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1 class="main-headline">Welcome to Recharge API Documentation!</h1>
+    <header class='icon-header'>
+      <div class='bolt-car'>
+        <i class="fas fa-bolt"></i>
+        <i class="fas fa-car"></i>
+      </div>
+      <i class="fas fa-mug-hot"></i>
+    </header>
     <article class="charging-station">
       <h2 class="charging-station-title">Charging Station Endpoints</h2>
       <section class="charging-station-endpoints">
