--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <i class="fas fa-bolt"></i>
         <i class="fas fa-car"></i>
       </div>
-      <i class="fas fa-mug-hot"></i>
+      <i class="fas fa-coffee"></i>
     </header>
     <article class="charging-station">
       <h2 class="charging-station-title">Charging Station Endpoints</h2>
