Combine icon container and main h2

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <h1 class="main-headline">Welcome to Recharge API Documentation!</h1>
-    <header class='icon-header'>
-      <div class='bolt-car'>
-        <i class="fas fa-bolt"></i>
+    <header class="main-header-container">
+      <h1 class="main-headline">Welcome to Recharge API Documentation!</h1>
+      <section class="icon-header">
         <i class="fas fa-car"></i>
-      </div>
-      <i class="fas fa-coffee"></i>
+        <i class="fas fa-coffee"></i>
+      </section>
     </header>
     <article class="charging-station">
       <h2 class="charging-station-title">Charging Station Endpoints</h2>
